# tumor_coal

./: .gitignore  CMakeLists.txt  Chain.cpp  Chain.hpp  ComparePriorPosterior.R  FilterTree.R  MCMCchain.h  MCMCtestTimeOriginDeltaChanging.R  Population.cpp  Population.hpp  README.md  SimulationBD.R  chain_manager.cpp  chain_manager.hpp  core_likelihood.cpp  core_likelihood.hpp  data_types.h  definitions.h  genotype_models.hpp  gradient_warn.data.R  hcm_test.cpp  hcm_test.hpp  mcmc_parameter.cpp  mcmc_parameter.hpp  output250_2.R  parameters  partition.cpp  partition.hpp  pll_utils.cpp  pll_utils.hpp  populations.cpp  populations.hpp  poset_smc.cpp  poset_smc.hpp  poset_smc_params.cpp  poset_smc_params.hpp  proposal.h  resampling.cpp  resampling.hpp  state.cpp  (+5 more)
MutationalModelSimul/: mutationModel.cpp  mutationModel.h
R_scripts/: 1run_1pop_asc_16.sh  1run_model_1_population_parallel_asc_16.R  run_model_2_pop_parallel.R
config/: parameters.txt  parametersMCMC.txt
data/input_data/:  bestTreeDelta0.1.tre  DataJC1Site2Cells.fasta  DataJC1Site2Cells.phylip  DataJC1Site2CellsRooted.fasta  DataJC1Site2CellsRooted.phylip  IUPAC_data_1clon_Gamma10_0002_0138_0001.phylip  IUPAC_data_1clon_JC_Gemma10.phylip  SimulatedDataJC.fasta  SimulatedDataJC.phylip  SimulatedDataJC1Site.fasta  SimulatedDataJC1Site.phylip  SimulatedDataJC1Site2Cells.phylip  SimulatedTreeJC.tre  SimulatedTreeJC1.tre  SimulatedTreeJC1Site.tre  SimulatedTreeJC1Site1.tre  SimulatedTreeJC1Site2Cells.tre  SimulatedTreeJC1Site2CellsRooted.tre  benchmark_1A.fasta  benchmark_1A.phylip  benchmark_1A.tre  benchmark_1B.fasta  benchmark_1B.phylip  benchmark_1B.tre  bestTreePhysicalTime=AfixedTau.tre  full_gen_Delta=4.695_T=0.643_theta=1.297_nMU=3.520_n=32_fADO=0.010_mSeqE=0.010_vSeqE=0.001_0002_0044_0001.phylip  parameters.txt  parametersMCMC.rtf  parametersMCMC.txt  trees_20_Delta=1T=0.5.tre  trees_2_Delta=1T=0.5.tre  trees_Model_time_0002_0001.tre  trees_Model_time_0002_0010.tre  trees_Model_time_Delta=21.519_T=0.128_theta=0.019_epsilon=0.000_n=14_0002_0100.tre  trees_Scaled_physical_time_0002_0006_n15_theta1.tre  trees_Scaled_physical_time_0002_0009_n4.tre  trees_Scaled_physical_time_0002_0010_n15.tre  trees_Scaled_physical_time_0002_0138.tre  true_20_Delta=1T=0.5.fasta  true_20_Delta=1T=0.5.phylip  (+10 more)
inference/: CMakeLists.txt  CTestTestfile.cmake  Chain.cpp  Chain.hpp  MCMCchain.h  Makefile  Population.cpp  Population.hpp  RF_distance_calculator.cpp  RF_distance_calculator.hpp  autocorrelation.cpp  autocorrelation.hpp  autocovariance.cpp  autocovariance.hpp  bd_coal_model.cpp  bd_coal_model.hpp  bd_coal_model_params.cpp  bd_coal_model_params.hpp  bd_coal_proposal.cpp  bd_coal_proposal.hpp  bd_coal_state.cpp  bd_coal_state.hpp  ccars.cpp  ccars.hpp  chain_manager.cpp  chain_manager.hpp  cmake_install.cmake  constants.hpp  core_likelihood.cpp  core_likelihood.hpp  ctmc_model.cpp  ctmc_model.hpp  data_types.hpp  data_utils.cpp  data_utils.hpp  definitions.h  definitions.hpp  eigen.cpp  eigen.hpp  genotype_error_model.cpp  (+68 more)
install/lib/: libpll.0.dylib  libpll.la  libpll_algorithm.0.dylib  libpll_algorithm.la  libpll_binary.dylib  libpll_binary.la  libpll_msa.dylib  libpll_msa.la  libpll_optimize.dylib  libpll_optimize.la  libpll_tree.dylib  libpll_tree.la  libpll_util.dylib  libpll_util.la
old_code/TumorCellCoal/: algo_callback.c  definitions.h  fileFuntions.h  kseq.shtml  libpll.0.dylib  libpll.la  libpll_algorithm.0.dylib  libpll_algorithm.la  libpll_binary.0.dylib  libpll_binary.la  libpll_msa.0.dylib  libpll_msa.la  libpll_optimize.0.dylib  libpll_optimize.la  libpll_tree.0.dylib  libpll_tree.la  libpll_util.0.dylib  libpll_util.la  main.c  model.h  parameters  pll_tree.c  pllmod_algorithm.c  population.h  signatures.h  tree.h
old_code/TumorCellCoal.xcodeproj/: project.pbxproj
old_code/TumorCellCoal.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
scripts/: ComparePriorPosterior.R  DeltaTvsTorigin.R  FilterTree.R  MCMCTest_splittedDelta_thetaT.R  MCMCtest.R  MCMCtest2.R  MCMCtest3movesLikelihoodTree.R  MCMCtestSample2ChangingTrees.R  MCMCtestTimeOrigin.R  MCMCtestTimeOriginDeltaChanging.R  RF.R  SimulationBD.R  analyzeChainsResults.R
simul/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  data_types.hpp  data_utils.cpp  data_utils.hpp  definitions.hpp  eigen.hpp  kseq_test.c  likelihood.h  main.cpp  mutationModel.cpp  mutationModel.h  output_functions.cpp  output_functions.hpp  poppulation.cpp  population.h  random.cpp  random.h  tree.h  tree_node.hpp  tumorcellcoal.h  util.h  utils.cpp  utils.hpp
stan_models/: stan_model_n_population_physical_time_GT1JC6_error_asc_paralllel.stan  stan_model_n_population_physical_time_GTJC6_error_asc_paralllel_refactored.stan  stan_model_n_population_physical_time_GTJC6_error_asc_paralllel_refactored_gamma.stan  stan_model_n_population_physical_time_JC16.stan  stan_model_one_pop_GTJC16_asc.stan  stan_model_one_pop_GTJC16_asc_number_invariables.stan  stan_model_one_pop_GTJC16_asc_parallel.stan  stan_model_one_pop_GTJC16_asc_parallel_16_constant_sites____noprior.stan
tests/: CMakeLists.txt  ccars_test.cpp  ccars_test.hpp  functions_test.cpp  functions_test.hpp  hcm_test.cpp  hcm_test.hpp  smc_test.cpp  smc_test.hpp  test.cpp
tumor_coal.xcodeproj/: project.pbxproj
tumor_coal.xcodeproj/project.xcworkspace/xcuserdata/faustofabiancrespofernandez.xcuserdatad/: UserInterfaceState.xcuserstate
tumor_coal.xcodeproj/xcuserdata/faustofabiancrespofernandez.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  RUN_TESTS_postBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
xcode/inference/: CTestTestfile.cmake  cmake_install.cmake
xcode/simul/: CTestTestfile.cmake  cmake_install.cmake
xcode/simul/Debug/: simul
xcode/tumor_coal.xcodeproj/: project.pbxproj
(+108 files in other folders)
